--- a/flip.css
+++ b/flip.css
@@ -106,6 +106,11 @@ h2 {
 /* comportamento */
 .cartao.remove {
     position: absolute;
+
+.cartao.removeRuim {
+    transition: margin 500ms, opacity 500ms;
+    margin-bottom: -110px;
+    opacity: 0;
 }
 
 
